samples/_failures_safe/1761081160_325cfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af0e5ad3.c: In function ‘main’:
./samples/SAFE/__tmp_af0e5ad3.c:177: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_af0e5ad3.c:176:9: error: expected declaration or statement at end of input
  176 |         if
      |         ^~
./samples/SAFE/__tmp_af0e5ad3.c:176:9: error: expected declaration or statement at end of input
